# videojs-snippets

./: CMakeLists.txt  Gruntfile.js  README.md  demo_snippets.html  index.html  main.cpp  mediarecorder.html  package.json  transcode.cpp  transcode.h  videojs-shortcuts.css  videojs-shortcuts.js  videojs-snippets.css  videojs-snippets.js
src/: _base.scss  main.scss  videojs-snippets.js
